// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroControlPanel adds achievement to hero of JavaZone achievement type shows achievement form 1`] = `
Array [
  <h3>
    Add achievement
  </h3>,
  <form>
    <div
      className="MuiFormControl-root-169"
    >
      <label
        className="MuiFormLabel-root-184 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181"
        data-shrink={false}
      >
        Achievement
      </label>
      <div
        className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root-191"
        >
          <select
            aria-invalid={false}
            autoFocus={true}
            className="MuiSelect-select-192 MuiInputBase-input-221 MuiInput-input-206"
            disabled={false}
            multiple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
          >
            <option />
            <option
              value="FOREDRAGSHOLDER_JZ"
            >
              JavaZone foredragsholder
            </option>
            <option
              value="FOREDRAGSHOLDER_JAVABIN"
            >
              Foredragsholder JavaBin
            </option>
            <option
              value="STYRE"
            >
              Styre
            </option>
          </select>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-139 MuiSelect-icon-197"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiFormLabel-filled-188 MuiFormLabel-required-189 MuiInputLabel-required-177 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181 MuiInputLabel-shrink-180"
          data-shrink={true}
        >
          JavaZone year
          <span
            className="MuiFormLabel-asterisk-190"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <div
            className="MuiSelect-root-191"
          >
            <select
              aria-invalid={false}
              className="MuiSelect-select-192 MuiInputBase-input-221 MuiInput-input-206"
              disabled={false}
              multiple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              value={2018}
            >
              <option
                value={2018}
              >
                2018
              </option>
              <option
                value={2017}
              >
                2017
              </option>
              <option
                value={2016}
              >
                2016
              </option>
              <option
                value={2015}
              >
                2015
              </option>
              <option
                value={2014}
              >
                2014
              </option>
              <option
                value={2013}
              >
                2013
              </option>
              <option
                value={2012}
              >
                2012
              </option>
              <option
                value={2011}
              >
                2011
              </option>
              <option
                value={2010}
              >
                2010
              </option>
              <option
                value={2009}
              >
                2009
              </option>
              <option
                value={2008}
              >
                2008
              </option>
            </select>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-139 MuiSelect-icon-197"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181"
          data-shrink={false}
        >
          Talk title
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input-221 MuiInput-input-206"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-17 MuiButtonBase-disabled-18 MuiButton-root-66 MuiButton-text-68 MuiButton-textPrimary-69 MuiButton-flat-71 MuiButton-flatPrimary-72 MuiButton-disabled-86"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="submit"
    >
      <span
        className="MuiButton-label-67"
      >
        Submit
      </span>
    </button>
  </form>,
  <a
    className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-flat-71"
    href="#test/heroes/2"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-67"
    >
      Back
    </span>
    <span
      className="MuiTouchRipple-root-92"
    />
  </a>,
]
`;

exports[`HeroControlPanel adds achievement to hero shows JavaBin achievement type 1`] = `
Array [
  <h3>
    Add achievement
  </h3>,
  <form>
    <div
      className="MuiFormControl-root-169"
    >
      <label
        className="MuiFormLabel-root-184 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181"
        data-shrink={false}
      >
        Achievement
      </label>
      <div
        className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root-191"
        >
          <select
            aria-invalid={false}
            autoFocus={true}
            className="MuiSelect-select-192 MuiInputBase-input-221 MuiInput-input-206"
            disabled={false}
            multiple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
          >
            <option />
            <option
              value="FOREDRAGSHOLDER_JZ"
            >
              JavaZone foredragsholder
            </option>
            <option
              value="FOREDRAGSHOLDER_JAVABIN"
            >
              Foredragsholder JavaBin
            </option>
            <option
              value="STYRE"
            >
              Styre
            </option>
          </select>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-139 MuiSelect-icon-197"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181"
          data-shrink={false}
        >
          Title
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input-221 MuiInput-input-206"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiFormLabel-filled-188 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181 MuiInputLabel-shrink-180"
          data-shrink={true}
        >
          Date
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input-221 MuiInput-input-206 MuiInputBase-inputType-224 MuiInput-inputType-209"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="date"
            value="2017-01-30"
          />
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-17 MuiButtonBase-disabled-18 MuiButton-root-66 MuiButton-text-68 MuiButton-flat-71 MuiButton-disabled-86"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-67"
      >
        Submit
      </span>
    </button>
  </form>,
  <a
    className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-flat-71"
    href="#test/heroes/2"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-67"
    >
      Back
    </span>
    <span
      className="MuiTouchRipple-root-92"
    />
  </a>,
]
`;

exports[`HeroControlPanel adds achievement to hero shows board member achievement type 1`] = `
Array [
  <h3>
    Add achievement
  </h3>,
  <form>
    <div
      className="MuiFormControl-root-169"
    >
      <label
        className="MuiFormLabel-root-184 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181"
        data-shrink={false}
      >
        Achievement
      </label>
      <div
        className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root-191"
        >
          <select
            aria-invalid={false}
            autoFocus={true}
            className="MuiSelect-select-192 MuiInputBase-input-221 MuiInput-input-206"
            disabled={false}
            multiple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
          >
            <option />
            <option
              value="FOREDRAGSHOLDER_JZ"
            >
              JavaZone foredragsholder
            </option>
            <option
              value="FOREDRAGSHOLDER_JAVABIN"
            >
              Foredragsholder JavaBin
            </option>
            <option
              value="STYRE"
            >
              Styre
            </option>
          </select>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-139 MuiSelect-icon-197"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiFormLabel-filled-188 MuiFormLabel-required-189 MuiInputLabel-required-177 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181 MuiInputLabel-shrink-180"
          data-shrink={true}
        >
          Role
          <span
            className="MuiFormLabel-asterisk-190"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <div
            className="MuiSelect-root-191"
          >
            <select
              aria-invalid={false}
              className="MuiSelect-select-192 MuiInputBase-input-221 MuiInput-input-206"
              disabled={false}
              multiple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              value="BOARD_MEMBER"
            >
              <option
                value="BOARD_MEMBER"
              >
                Board member
              </option>
              <option
                value="VICE_CHAIR"
              >
                Vice chair
              </option>
              <option
                value="CHAIR"
              >
                Chair
              </option>
            </select>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-139 MuiSelect-icon-197"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiFormLabel-filled-188 MuiFormLabel-required-189 MuiInputLabel-required-177 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181 MuiInputLabel-shrink-180"
          data-shrink={true}
        >
          Elected year
          <span
            className="MuiFormLabel-asterisk-190"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <div
            className="MuiSelect-root-191"
          >
            <select
              aria-invalid={false}
              className="MuiSelect-select-192 MuiInputBase-input-221 MuiInput-input-206"
              disabled={false}
              multiple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              value="2018"
            >
              <option
                value="2018"
              >
                2018
              </option>
              <option
                value="2017"
              >
                2017
              </option>
              <option
                value="2016"
              >
                2016
              </option>
              <option
                value="2015"
              >
                2015
              </option>
              <option
                value="2014"
              >
                2014
              </option>
              <option
                value="2013"
              >
                2013
              </option>
              <option
                value="2012"
              >
                2012
              </option>
              <option
                value="2011"
              >
                2011
              </option>
              <option
                value="2010"
              >
                2010
              </option>
              <option
                value="2009"
              >
                2009
              </option>
              <option
                value="2008"
              >
                2008
              </option>
            </select>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-139 MuiSelect-icon-197"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-textPrimary-69 MuiButton-flat-71 MuiButton-flatPrimary-72"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-67"
      >
        Submit
      </span>
      <span
        className="MuiTouchRipple-root-92"
      />
    </button>
  </form>,
  <a
    className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-flat-71"
    href="#test/heroes/2"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-67"
    >
      Back
    </span>
    <span
      className="MuiTouchRipple-root-92"
    />
  </a>,
]
`;

exports[`HeroControlPanel lists achievements for hero 1`] = `
<div
  className="MuiPaper-root-100 MuiPaper-elevation1-103 MuiPaper-rounded-101 MuiCard-root-99"
>
  <div
    className="MuiCardHeader-root-127"
  >
    <div
      className="MuiCardHeader-avatar-128"
    >
      <div
        className="MuiAvatar-root-21 MuiAvatar-colorDefault-22"
      >
        S
      </div>
    </div>
    <div
      className="MuiCardHeader-content-130"
    >
      <span
        className="MuiTypography-root-30 MuiTypography-body2-38 MuiCardHeader-title-131"
      >
        Some test
      </span>
      <span
        className="MuiTypography-root-30 MuiTypography-body2-38 MuiTypography-colorTextSecondary-63 MuiCardHeader-subheader-132"
      >
        test@example.com undefined
      </span>
    </div>
    <div
      className="MuiCardHeader-action-129"
    >
      <a
        className="MuiButtonBase-root-17 MuiIconButton-root-133"
        href="#test/"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiIconButton-label-138"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-139"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-92"
        />
      </a>
    </div>
  </div>
  <div
    className="MuiCardContent-root-148"
  >
    <h2
      className="MuiTypography-root-30 MuiTypography-h5-46 MuiTypography-gutterBottom-57"
    >
      Achievements
    </h2>
    <ul
      className="MuiList-root-1 MuiList-padding-2"
    >
      <li
        className="MuiListItem-container-6"
      >
        <div
          className="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14 MuiListItem-secondaryAction-15"
          href="#test//heroes/2/achievement/11"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiAvatar-root-21 MuiAvatar-colorDefault-22"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-139"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
          <div
            className="MuiListItemText-root-24"
          >
            <span
              className="MuiTypography-root-30 MuiTypography-subheading-37 MuiListItemText-primary-27"
            >
              A great girl
            </span>
          </div>
          <span
            className="MuiTouchRipple-root-92"
          />
        </div>
        <div
          className="MuiListItemSecondaryAction-root-149"
        >
          <button
            className="MuiButtonBase-root-17 MuiIconButton-root-133"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-138"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-139"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-92"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiListItem-container-6"
      >
        <div
          className="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14 MuiListItem-secondaryAction-15"
          href="#test//heroes/2/achievement/12"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiAvatar-root-21 MuiAvatar-colorDefault-22"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-139"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
          <div
            className="MuiListItemText-root-24"
          >
            <span
              className="MuiTypography-root-30 MuiTypography-subheading-37 MuiListItemText-primary-27"
            >
              A super guy!
            </span>
          </div>
          <span
            className="MuiTouchRipple-root-92"
          />
        </div>
        <div
          className="MuiListItemSecondaryAction-root-149"
        >
          <button
            className="MuiButtonBase-root-17 MuiIconButton-root-133"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-138"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-139"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-92"
            />
          </button>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="MuiCardActions-root-166"
  >
    <a
      className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-textPrimary-69 MuiButton-flat-71 MuiButton-flatPrimary-72 MuiButton-sizeSmall-89 MuiCardActions-action-168"
      href="#test//heroes/2/edit"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-67"
      >
        Edit
      </span>
      <span
        className="MuiTouchRipple-root-92"
      />
    </a>
    <a
      className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-textPrimary-69 MuiButton-flat-71 MuiButton-flatPrimary-72 MuiButton-sizeSmall-89 MuiCardActions-action-168"
      href="#test//heroes/2/addAchievement"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-67"
      >
        Add achievement
      </span>
      <span
        className="MuiTouchRipple-root-92"
      />
    </a>
  </div>
</div>
`;

exports[`HeroControlPanel shows achievement update 1`] = `
Array [
  <h3>
    Update achievement
  </h3>,
  <form>
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiFormLabel-filled-188 MuiFormLabel-required-189 MuiInputLabel-required-177 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181 MuiInputLabel-shrink-180"
          data-shrink={true}
        >
          Role
          <span
            className="MuiFormLabel-asterisk-190"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <div
            className="MuiSelect-root-191"
          >
            <select
              aria-invalid={false}
              className="MuiSelect-select-192 MuiInputBase-input-221 MuiInput-input-206"
              disabled={false}
              multiple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              value="BOARD_MEMBER"
            >
              <option
                value="BOARD_MEMBER"
              >
                Board member
              </option>
              <option
                value="VICE_CHAIR"
              >
                Vice chair
              </option>
              <option
                value="CHAIR"
              >
                Chair
              </option>
            </select>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-139 MuiSelect-icon-197"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiFormLabel-filled-188 MuiFormLabel-required-189 MuiInputLabel-required-177 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181 MuiInputLabel-shrink-180"
          data-shrink={true}
        >
          Elected year
          <span
            className="MuiFormLabel-asterisk-190"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <div
            className="MuiSelect-root-191"
          >
            <select
              aria-invalid={false}
              className="MuiSelect-select-192 MuiInputBase-input-221 MuiInput-input-206"
              disabled={false}
              multiple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              value={2019}
            >
              <option
                value="2018"
              >
                2018
              </option>
              <option
                value="2017"
              >
                2017
              </option>
              <option
                value="2016"
              >
                2016
              </option>
              <option
                value="2015"
              >
                2015
              </option>
              <option
                value="2014"
              >
                2014
              </option>
              <option
                value="2013"
              >
                2013
              </option>
              <option
                value="2012"
              >
                2012
              </option>
              <option
                value="2011"
              >
                2011
              </option>
              <option
                value="2010"
              >
                2010
              </option>
              <option
                value="2009"
              >
                2009
              </option>
              <option
                value="2008"
              >
                2008
              </option>
            </select>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-139 MuiSelect-icon-197"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-textPrimary-69 MuiButton-flat-71 MuiButton-flatPrimary-72"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-67"
      >
        Submit
      </span>
      <span
        className="MuiTouchRipple-root-92"
      />
    </button>
    <a
      className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-flat-71"
      href="#test/heroes/2"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-67"
      >
        Back
      </span>
      <span
        className="MuiTouchRipple-root-92"
      />
    </a>
  </form>,
]
`;

exports[`HeroControlPanel shows hero edit view 1`] = `
Array [
  <h2>
    Some test
     (edit)
  </h2>,
  <form
    onSubmit={[Function]}
  >
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiFormLabel-filled-188 MuiFormLabel-required-189 MuiInputLabel-required-177 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181 MuiInputLabel-shrink-180"
          data-shrink={true}
        >
          Display name
          <span
            className="MuiFormLabel-asterisk-190"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={true}
            className="MuiInputBase-input-221 MuiInput-input-206"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="text"
            value="Some test"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiFormLabel-filled-188 MuiFormLabel-required-189 MuiInputLabel-required-177 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181 MuiInputLabel-shrink-180"
          data-shrink={true}
        >
          Email address
          <span
            className="MuiFormLabel-asterisk-190"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={true}
            className="MuiInputBase-input-221 MuiInput-input-206 MuiInputBase-inputType-224 MuiInput-inputType-209"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="email"
            value="test@example.com"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181"
          data-shrink={false}
        >
          Twitter handle
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={true}
            className="MuiInputBase-input-221 MuiInput-input-206 MuiInputBase-inputType-224 MuiInput-inputType-209"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type=""
          />
        </div>
      </div>
    </div>
    <div>
      <button
        className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-textPrimary-69 MuiButton-flat-71 MuiButton-flatPrimary-72"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="submit"
      >
        <span
          className="MuiButton-label-67"
        >
          Lagre
        </span>
        <span
          className="MuiTouchRipple-root-92"
        />
      </button>
    </div>
  </form>,
  <a
    className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-flat-71"
    href="#test/heroes/2"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-67"
    >
      Back
    </span>
    <span
      className="MuiTouchRipple-root-92"
    />
  </a>,
]
`;

exports[`HeroControlPanel shows hero status 1`] = `
<div
  className="MuiPaper-root-100 MuiPaper-elevation1-103 MuiPaper-rounded-101 MuiCard-root-99"
>
  <div
    className="MuiCardHeader-root-127"
  >
    <div
      className="MuiCardHeader-avatar-128"
    >
      <div
        className="MuiAvatar-root-21 MuiAvatar-colorDefault-22"
      >
        S
      </div>
    </div>
    <div
      className="MuiCardHeader-content-130"
    >
      <span
        className="MuiTypography-root-30 MuiTypography-body2-38 MuiCardHeader-title-131"
      >
        Some test
      </span>
      <span
        className="MuiTypography-root-30 MuiTypography-body2-38 MuiTypography-colorTextSecondary-63 MuiCardHeader-subheader-132"
      >
        test@example.com undefined
      </span>
    </div>
    <div
      className="MuiCardHeader-action-129"
    >
      <a
        className="MuiButtonBase-root-17 MuiIconButton-root-133"
        href="#test"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiIconButton-label-138"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-139"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-92"
        />
      </a>
    </div>
  </div>
  <div
    className="MuiCardContent-root-148"
  >
    <h2
      className="MuiTypography-root-30 MuiTypography-h5-46 MuiTypography-gutterBottom-57"
    >
      Achievements
    </h2>
    <ul
      className="MuiList-root-1 MuiList-padding-2"
    >
      <li
        className="MuiListItem-container-6"
      >
        <div
          className="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14 MuiListItem-secondaryAction-15"
          href="#test/heroes/2/achievement/11"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiAvatar-root-21 MuiAvatar-colorDefault-22"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-139"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
          <div
            className="MuiListItemText-root-24"
          >
            <span
              className="MuiTypography-root-30 MuiTypography-subheading-37 MuiListItemText-primary-27"
            >
              A great girl
            </span>
          </div>
          <span
            className="MuiTouchRipple-root-92"
          />
        </div>
        <div
          className="MuiListItemSecondaryAction-root-149"
        >
          <button
            className="MuiButtonBase-root-17 MuiIconButton-root-133"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-138"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-139"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-92"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiListItem-container-6"
      >
        <div
          className="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14 MuiListItem-secondaryAction-15"
          href="#test/heroes/2/achievement/12"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiAvatar-root-21 MuiAvatar-colorDefault-22"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-139"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
          <div
            className="MuiListItemText-root-24"
          >
            <span
              className="MuiTypography-root-30 MuiTypography-subheading-37 MuiListItemText-primary-27"
            >
              A super guy!
            </span>
          </div>
          <span
            className="MuiTouchRipple-root-92"
          />
        </div>
        <div
          className="MuiListItemSecondaryAction-root-149"
        >
          <button
            className="MuiButtonBase-root-17 MuiIconButton-root-133"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-138"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-139"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-92"
            />
          </button>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="MuiCardActions-root-166"
  >
    <a
      className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-textPrimary-69 MuiButton-flat-71 MuiButton-flatPrimary-72 MuiButton-sizeSmall-89 MuiCardActions-action-168"
      href="#test/heroes/2/edit"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-67"
      >
        Edit
      </span>
      <span
        className="MuiTouchRipple-root-92"
      />
    </a>
    <a
      className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-textPrimary-69 MuiButton-flat-71 MuiButton-flatPrimary-72 MuiButton-sizeSmall-89 MuiCardActions-action-168"
      href="#test/heroes/2/addAchievement"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-67"
      >
        Add achievement
      </span>
      <span
        className="MuiTouchRipple-root-92"
      />
    </a>
  </div>
</div>
`;

exports[`HeroControlPanel shows list of current heroes 1`] = `
Array [
  <h2>
    Heroes
  </h2>,
  <ul
    className="MuiList-root-1 MuiList-padding-2"
  >
    <div
      className="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="MuiListItemIcon-root-20"
      >
        <div
          className="MuiAvatar-root-21 MuiAvatar-colorDefault-22"
        />
      </div>
      <div
        className="MuiListItemText-root-24"
      >
        <span
          className="MuiTypography-root-30 MuiTypography-subheading-37 MuiListItemText-primary-27"
        >
          Johannes Test
        </span>
        <p
          className="MuiTypography-root-30 MuiTypography-body1-39 MuiTypography-colorTextSecondary-63 MuiListItemText-secondary-28"
        >
          johannes@example.com
        </p>
      </div>
      <span
        className="MuiTouchRipple-root-92"
      />
    </div>
    <div
      className="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="MuiListItemIcon-root-20"
      >
        <div
          className="MuiAvatar-root-21 MuiAvatar-colorDefault-22"
        />
      </div>
      <div
        className="MuiListItemText-root-24"
      >
        <span
          className="MuiTypography-root-30 MuiTypography-subheading-37 MuiListItemText-primary-27"
        >
          Some test
        </span>
        <p
          className="MuiTypography-root-30 MuiTypography-body1-39 MuiTypography-colorTextSecondary-63 MuiListItemText-secondary-28"
        >
          test@example.com
        </p>
      </div>
      <span
        className="MuiTouchRipple-root-92"
      />
    </div>
  </ul>,
  <a
    className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-contained-77 MuiButton-containedPrimary-78 MuiButton-raised-80 MuiButton-raisedPrimary-81"
    href="#test/heroes/add"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-67"
    >
      Add hero
    </span>
    <span
      className="MuiTouchRipple-root-92"
    />
  </a>,
]
`;

exports[`HeroControlPanel shows new hero screen 1`] = `
<form
  onSubmit={[Function]}
>
  <h2>
    Add a hero
  </h2>
  <div>
    <div
      className="MuiFormControl-root-169"
    >
      <label
        className="MuiFormLabel-root-184 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181"
        data-shrink={false}
        htmlFor="add-hero-slack-member"
      >
        Select from slack:
      </label>
      <div
        className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root-191"
        >
          <select
            aria-invalid={false}
            autoFocus={true}
            className="MuiSelect-select-192 MuiInputBase-input-221 MuiInput-input-206"
            disabled={false}
            id="add-hero-slack-member"
            multiple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            value=""
          >
            <option />
            <option
              value="johannes@example.com"
            >
              Johannes Brodwall
               &lt;
              johannes@example.com
              &gt;
            </option>
            <option
              value="alice@example.com"
            >
              Alice
               &lt;
              alice@example.com
              &gt;
            </option>
            <option
              value="bob@example.net"
            >
              Bob
               &lt;
              bob@example.net
              &gt;
            </option>
          </select>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-139 MuiSelect-icon-197"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="MuiFormControl-root-169"
    >
      <label
        className="MuiFormLabel-root-184 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181"
        data-shrink={false}
      >
        Name
      </label>
      <div
        className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          className="MuiInputBase-input-221 MuiInput-input-206"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-169"
    >
      <label
        className="MuiFormLabel-root-184 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181"
        data-shrink={false}
      >
        Email
      </label>
      <div
        className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          className="MuiInputBase-input-221 MuiInput-input-206"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-169"
    >
      <label
        className="MuiFormLabel-root-184 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181"
        data-shrink={false}
      >
        Twitter
      </label>
      <div
        className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          className="MuiInputBase-input-221 MuiInput-input-206"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div>
    <button
      className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-contained-77 MuiButton-containedPrimary-78 MuiButton-raised-80 MuiButton-raisedPrimary-81"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-67"
      >
        Submit
      </span>
      <span
        className="MuiTouchRipple-root-92"
      />
    </button>
    <button
      className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-contained-77 MuiButton-raised-80"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-67"
      >
        Cancel
      </span>
      <span
        className="MuiTouchRipple-root-92"
      />
    </button>
  </div>
</form>
`;

exports[`HeroControlPanel udpates hero name 1`] = `
Array [
  <h2>
    Updated name
     (edit)
  </h2>,
  <form
    onSubmit={[Function]}
  >
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiFormLabel-filled-188 MuiFormLabel-required-189 MuiInputLabel-required-177 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181 MuiInputLabel-shrink-180"
          data-shrink={true}
        >
          Display name
          <span
            className="MuiFormLabel-asterisk-190"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={true}
            className="MuiInputBase-input-221 MuiInput-input-206"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="text"
            value="Updated name"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiFormLabel-filled-188 MuiFormLabel-required-189 MuiInputLabel-required-177 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181 MuiInputLabel-shrink-180"
          data-shrink={true}
        >
          Email address
          <span
            className="MuiFormLabel-asterisk-190"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={true}
            className="MuiInputBase-input-221 MuiInput-input-206 MuiInputBase-inputType-224 MuiInput-inputType-209"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="email"
            value="johannes@example.com"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181"
          data-shrink={false}
        >
          Twitter handle
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={true}
            className="MuiInputBase-input-221 MuiInput-input-206 MuiInputBase-inputType-224 MuiInput-inputType-209"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type=""
          />
        </div>
      </div>
    </div>
    <div>
      <button
        className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-textPrimary-69 MuiButton-flat-71 MuiButton-flatPrimary-72"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="submit"
      >
        <span
          className="MuiButton-label-67"
        >
          Lagre
        </span>
        <span
          className="MuiTouchRipple-root-92"
        />
      </button>
    </div>
  </form>,
  <a
    className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-flat-71"
    href="#test/heroes/1"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-67"
    >
      Back
    </span>
    <span
      className="MuiTouchRipple-root-92"
    />
  </a>,
]
`;

exports[`HeroControlPanel updates speaker achievement 1`] = `
Array [
  <h3>
    Update achievement
  </h3>,
  <form>
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiFormLabel-filled-188 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181 MuiInputLabel-shrink-180"
          data-shrink={true}
        >
          Title
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input-221 MuiInput-input-206"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value="Updated title"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-169"
      >
        <label
          className="MuiFormLabel-root-184 MuiFormLabel-filled-188 MuiInputLabel-root-173 MuiInputLabel-formControl-178 MuiInputLabel-animated-181 MuiInputLabel-shrink-180"
          data-shrink={true}
        >
          Date
        </label>
        <div
          className="MuiInputBase-root-211 MuiInput-root-198 MuiInput-underline-202 MuiInputBase-formControl-212 MuiInput-formControl-199"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input-221 MuiInput-input-206 MuiInputBase-inputType-224 MuiInput-inputType-209"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="date"
            value="2018/10/15"
          />
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-flat-71"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-67"
      >
        Submit
      </span>
      <span
        className="MuiTouchRipple-root-92"
      />
    </button>
    <a
      className="MuiButtonBase-root-17 MuiButton-root-66 MuiButton-text-68 MuiButton-flat-71"
      href="#test/heroes/2"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-67"
      >
        Back
      </span>
      <span
        className="MuiTouchRipple-root-92"
      />
    </a>
  </form>,
]
`;
